--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_svg: ^1.0.3
   image_picker: ^0.8.4+11
   get: ^4.1.4
+  intl: ^0.17.0
+  datetime_picker_formfield: ^2.0.0
   json_annotation:
 
 dev_dependencies:
