--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   get: ^4.1.4
   intl: ^0.17.0
   datetime_picker_formfield: ^2.0.0
+  splashscreen: ^1.3.5
   json_annotation:
 
 dev_dependencies:
@@ -56,6 +57,11 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+  flutter_native_splash: ^1.2.2
+
+flutter_native_splash:
+  background_image: assets/images/splash.png
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
